@@ -26,7 +26,7 @@ Revision history for perl module Crypt::PKCS10
 - Support repeated attributes
 - Various crashes, internal optimizations
 - More OIDs
-- Access methods: subject, subjectAltName, extensions,
+- Access methods: subject, subjectAltName, extensions
 - Generate access methods for unknown OIDs in DNs at runtime
 - Add extractCSR method to get CSR in binary or PEM
 - subjectPublicKey option to extract in PEM format
@@ -36,5 +36,6 @@ Revision history for perl module Crypt::PKCS10
 - More tests
 - Improve documentation
 - Add setAPIversion, regularize OID names in V1
+- For API V1, attributes method returns names or values of attributes (except extensions)
 - Improve build: Use Dist::Zilla, autogenerate README,LICENE,META,Makefile.PL
 - Generate & ship Commitlog from git
